modify json structure

--- a/core/tasks.json
+++ b/core/tasks.json
@@ -1,5 +1,5 @@
 {
-  "table":
+  "email_table":
     [
       {
 
@@ -16,6 +16,24 @@
 
       }
 
-    ]
+    ],
+  "cellphone_table":[
+      {
+
+        "name":"",
+        "chinese_name":"",
+        "url":"",
+        "method":"",
+        "registered_string":""
+      }
+
+    ,
+      {
+
+
+      }
+
+
+  ]
 
 }
