--- a/core/tasks.json
+++ b/core/tasks.json
@@ -7,7 +7,8 @@
         "chinese_name":"",
         "url":"",
         "method":"",
-        "registered_string":""
+        "registered_string":"",
+        "data_schema":""
       }
 
     ,
@@ -18,14 +19,15 @@
 
     ],
   "cellphone_table":[
-      {
+    {
 
-        "name":"",
-        "chinese_name":"",
-        "url":"",
-        "method":"",
-        "registered_string":""
-      }
+      "name":"",
+      "chinese_name":"",
+      "url":"",
+      "method":"",
+      "registered_string":"",
+      "data_schema":""
+    }
 
     ,
       {
